# logmon

./: .gitignore  README.md  index.html  logmon.py  logmon.service  mkschema.sh  mypy.ini  pyproject.toml  requirements.txt  schema.yaml
.github/workflows/: tests.yml
logmon/: __init__.py  __main__.py  better_inotify.py  cleanup_brief.py  constants.py  global_state.py  inotify.py  inotify_dummy.py  inotify_wait_for_exists.py  json_match.py  limiter.py  limits_service.py  logmon.py  schema.py  systemd.py  template.py  types.py  yaml.py
logmon/actions/: action.py  base_email_action.py  command_action.py  file_action.py  http_action.py  http_email_sender.py  imap_email_action.py  imap_email_sender.py  remote_action.py  remote_email_sender.py  smtp_email_action.py  smtp_email_sender.py  ssl_email_sender.py
logmon/email_senders/: __init__.py  email_sender.py  http_email_sender.py  imap_email_sender.py  remote_email_sender.py  smtp_email_sender.py  ssl_email_sender.py
logmon/entry_readers/: __init__.py  entry_reader_factory.py  json_entry_reader_factory.py  text_entry_reader_factory.py
tests/: conftest.py  print_entries.py  tee.py  test_command.py  test_fifo.py  test_file.py  test_glob.py  test_http.py  test_json.py  test_limits.py  test_logmails.py  test_main.py  test_multi.py  test_smtp.py  test_systemd.py  testutils.py
