[project]
name = "logmon"
version = "0.8.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic==2.12.*"]
[project.optional-dependencies]
yaml = ["PyYAML==6.0.*"]
ruamel_yaml = ["ruamel.yaml==0.18.*"]
systemd = ["cysystemd==2.0.*"]
[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-mock==3.15.*",
    "mypy==1.19.*",
    "types-PyYAML==6.0.*",
    "json-schema-for-humans>=1.5.1",
]
