[project]
name = "logmon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic==2.12.*"]
dynamic = ["version"]
[tool.setuptools.dynamic]
version = {attr = "logmon.constants.__version__"}
[project.scripts]
logmon = "logmon.__main__:main"
[project.optional-dependencies]
yaml = ["PyYAML==6.0.*"]
ruamel_yaml = ["ruamel.yaml==0.18.*"]
systemd = ["cysystemd==2.0.*"]
[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-mock==3.15.*",
    "mypy==1.19.*",
    "types-PyYAML==6.0.*",
    "json-schema-for-humans>=1.5.1",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
