[project]
name = "logmon"
description = "Monitore log files and run actions when patterns match."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-2.0"
keywords = ["logs", "monitoring", "systemd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = ["pydantic==2.12.*"]
dynamic = ["version"]
[project.urls]
"Homepage" = "https://github.com/panzi/logmon/"
"Repository" = "https://github.com/panzi/logmon/"
"Issue Tracker" = "https://github.com/panzi/logmon/issues"
[tool.setuptools.dynamic]
version = {attr = "logmon.constants.__version__"}
[project.scripts]
logmon = "logmon.__main__:main"
[project.optional-dependencies]
yaml = ["PyYAML==6.0.*"]
ruamel_yaml = ["ruamel.yaml==0.18.*"]
systemd = ["cysystemd==2.0.*"]
[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-mock==3.15.*",
    "mypy==1.19.*",
    "types-PyYAML==6.0.*",
    "json-schema-for-humans>=1.5.1",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["logmon"]
package-data = { logmon = ["py.typed"] }
